# blockzilla

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.raw-recorder  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  build.rs  build_cache.sh  docker-compose.blockzilla-receiver.yml  docker-compose.dokploy-pull-source.yml  docker-compose.dokploy.yml  docker-compose.hivezilla-shred.dokploy.yml  roundtrip_lossless_v2.sh
bins/optimize-car/: Cargo.toml
bins/optimize-car/src/: main.rs
blockzilla/: Cargo.toml  README.md
blockzilla-get-block-worker/: Cargo.toml  package.json  wrangler.toml
blockzilla-get-block-worker/src/: main.rs  worker.rs
blockzilla/src/: archive_v2.rs  block_time_gaps.rs  car_preflight.rs  first_seen_finalization.rs  genesis_epoch0.rs  main.rs  pre_hot.rs  split_compact.rs  token_events.rs
blockzilla/src/archive_v2/: repair.rs
blockzilla/src/commands/: analyze.rs  dump_log_strings.rs  mod.rs
blockzilla/src/scheduler/: cli.rs  live_materialize_task_model.rs  mod.rs
car-reader/: Cargo.toml  build.rs
car-reader/src/: cbor_utils.rs  lib.rs  open_epoch.rs  transaction_parser.rs
compact-archive/: Cargo.toml  build.rs
compact-archive/src/: archive.rs  carblock_to_compact.rs  compact_log.rs  format.rs  io.rs  lib.rs  meta_decode.rs  partial_meta.rs  transaction_parser.rs
compact-archive/src/optimized_cbor/decode/: errors.rs  logs.rs  metadata.rs  transaction.rs
crates/blockzilla-format/: Cargo.toml  README.md
crates/blockzilla-format/src/: blockhash_registry.rs  car_block_index.rs  framed.rs  lib.rs  live_producer.rs  reader.rs  registry.rs  writer.rs
crates/blockzilla-format/src/compact/: block.rs  log.rs  meta.rs  mod.rs  nonce.rs  pubkey.rs  signature.rs  tx.rs
crates/blockzilla-format/src/pass1/: mod.rs
crates/blockzilla-format/src/program_logs/: account_compression.rs  address_lookup_table.rs  associated_token_account.rs  loader_v3.rs  loader_v4.rs  memo.rs  mod.rs  record.rs  stake.rs  system_program.rs  token.rs  token_2022.rs  transfer_hook.rs  zk_elgamal_proof.rs
crates/blockzilla-format/src/split_compact/: mod.rs
crates/blockzilla-format/src/v2/: archive.rs  block_time_gaps.rs  mod.rs
crates/blockzilla-log-parser/: Cargo.toml  README.md
crates/blockzilla-log-parser/benches/: parse_line.rs
crates/blockzilla-log-parser/src/: lib.rs
crates/blockzilla-read-sdk/: Cargo.toml  README.md
crates/blockzilla-read-sdk/src/: error.rs  http.rs  lib.rs  manifest.rs  reader.rs  source.rs
crates/car-reader/: Cargo.toml  README.md  Readme.md
crates/car-reader/benches/fixtures/: epoch-800-biggest.car
crates/car-reader/src/: car_block_group.rs  car_stream.rs  compact_transform.rs  convert_metadata.rs  error.rs  lib.rs  metadata_decoder.rs  node.rs  reader.rs  stored_transaction_status_meta.rs  versioned_transaction.rs
crates/car-reader/src/car_stream_par/: car_group_pool.rs  mod.rs  par_stream.rs
crates/car-reader/src/stored_transaction/: status_meta.rs  status_meta_v2.rs  token_amount.rs
crates/hivezilla/: Cargo.toml  README.md
crates/hivezilla/src/: capacity.rs  coordinator.rs  hetzner.rs  lib.rs  main.rs  model.rs  planner.rs  render.rs
crates/hivezilla/ui/: package-lock.json  package.json
crates/hivezilla/ui/src/: app.css
crates/live-producer/: Cargo.toml  README.md
crates/live-producer/config/: ingest-primary.example.json  ingest-replica.example.json
crates/live-producer/proto/: raw_replication.proto
crates/live-producer/src/: app.rs  config.rs  epoch.rs  fixture_bench.rs  grpc.rs  grpc_raw.rs  layout.rs  lib.rs  main.rs  rpc.rs  source.rs
crates/live-producer/src/grpc_raw/: receiver_bridge.rs
crates/live-producer/src/ingest/: config.rs  dedup.rs  mod.rs  primary_term.rs  receipt_crypto.rs  receiver.rs  replication.rs  replication_client.rs  replication_pull_client.rs  replication_pull_runtime.rs  replication_pull_source.rs  replication_sender.rs  replication_service.rs  replication_wire.rs  spool.rs
crates/live-producer/tests/: cli_output.rs  ingest_config.rs
crates/old-faithful/account-index/: Cargo.toml
crates/old-faithful/account-index/src/: lib.rs  main.rs
crates/old-faithful/archive-importer/: Cargo.toml  README.md
crates/old-faithful/archive-importer/src/: archive_v2.rs  build.rs  build_all.rs  build_registry.rs  car_block_index.rs  compact.rs  genesis_epoch0.rs  lossless_v2.rs  main.rs  pass1.rs  split_compact.rs  token_events.rs
crates/old-faithful/car-reader/: Cargo.toml  Readme.md  build.rs
crates/old-faithful/car-reader/benches/: big_block.rs
crates/old-faithful/get-block-worker/: Cargo.toml  README.md  package.json  wrangler.toml
crates/old-faithful/signature-index/: Cargo.toml
crates/old-faithful/slot-ranges/: Cargo.toml  README.md  build-car-slot-indexes.sh  build-slot-index-range.sh  dl-indexes.sh  sync-slot-index-r2.sh
crates/old-faithful/token-index/: Cargo.toml
crates/optimized-archive/: Cargo.toml
crates/optimized-archive/src/: carblock_to_compact.rs  compact_block.rs  lib.rs
edgezilla/old-faithful-get-block/: Cargo.toml  README.md  package.json  wrangler.example.toml
edgezilla/old-faithful-get-block/src/: lib.rs
examples/token-api/: Cargo.toml  README.md
examples/token-api/src/: indexer.rs  store.rs
examples/token-api/static/: app.js  index.html
hivezilla/: Cargo.toml  README.md
hivezilla/config/: ingest-primary.example.json
hivezilla/src/: app.rs  grpc.rs  grpc_raw.rs  rpc.rs
hivezilla/src/ingest/: replication.rs
hivezilla/tests/: ingest_config.rs
optimize-car-archive/: Cargo.toml
optimize-car-archive/src/: compact_log.rs  convert.rs  main.rs
services/blockzilla-archive-gateway/: Cargo.toml  README.md
services/blockzilla-archive-gateway/src/: lib.rs  main.rs
services/shred-reader/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.dokploy.yml
services/shred-reader/src/: config.rs  identity.rs  leader_schedule.rs  loss_telemetry.rs  main.rs  metrics.rs  receiver.rs  repair_runtime.rs  repair_service.rs  repair_tracker.rs  repair_trust_store.rs  repair_wal.rs  repair_wire.rs
(+346 files in other folders)
