[workspace]
resolver = "2"
members = [
    "blockzilla",
    "blockzilla-get-block-worker",
    "crates/blockzilla-format",
    "crates/blockzilla-log-parser",
    "crates/live-producer",
    "crates/old-faithful/car-reader",
    "crates/old-faithful/slot-ranges",
    "crates/token-price-api",
]
exclude = ["solana-prog/"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FernoLabs/blockzilla"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.release-debug]
inherits = "release"
debug = true
