[workspace]
resolver = "2"
members = [
    "blockzilla",
    "hivezilla",
    "edgezilla/blockzilla-get-block",
    "edgezilla/old-faithful-get-block",
    "crates/blockzilla-format",
    "crates/blockzilla-log-parser",
    "crates/old-faithful/car-reader",
    "crates/old-faithful/slot-ranges",
    "examples/token-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/FernoLabs/blockzilla"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[profile.release-debug]
inherits = "release"
debug = true
