[package]
name = "blockzilla-get-block-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "blockzilla-get-block-worker"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "rpc-epoch-bench"
path = "src/bin/rpc_epoch_bench.rs"
required-features = ["cli"]

[[bin]]
name = "rpc-correctness-check"
path = "src/bin/rpc_correctness_check.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:anyhow",
    "dep:clap",
    "dep:reqwest",
    "dep:pprof",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:zstd",
]
worker = [
    "dep:futures-channel",
    "dep:futures-util",
    "dep:js-sys",
    "dep:ruzstd",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:worker",
]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
base64 = "0.22.1"
blockzilla-format = { path = "../crates/blockzilla-format" }
bs58 = "0.5.1"
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
five8 = "1.0.0"
futures-channel = { version = "0.3.32", default-features = false, features = ["alloc", "sink"], optional = true }
futures-util = { version = "0.3.32", default-features = false, optional = true }
itoa = "1.0.18"
js-sys = { version = "0.3.98", optional = true }
of-car-reader = { path = "../crates/old-faithful/car-reader", default-features = false }
pprof = { version = "0.15.0", features = ["flamegraph"], optional = true }
reqwest = { version = "0.13.3", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls", "zstd"], optional = true }
ruzstd = { version = "0.8.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"], optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", optional = true }
wasm-bindgen = { version = "0.2.121", optional = true }
wasm-bindgen-futures = { version = "0.4.71", optional = true }
worker = { version = "0.8.3", features = ["http"], optional = true }
wincode = "0.5.4"
zstd = { version = "0.13.3", optional = true }
