[package]
name = "blockzilla"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobins = false
default-run = "blockzilla"

[features]
default = ["known-program-logs"]
known-program-logs = ["blockzilla-format/known-program-logs"]
# Opt-in binaries for archive investigation and fixture extraction.
diagnostic-tools = []
# Opt-in experimental performance probes; these are not stable user commands.
benchmark-tools = []
# Opt-in one-shot archive migration programs.
migration-tools = []
# Convenience feature for contributors who need every non-product binary.
developer-tools = ["diagnostic-tools", "benchmark-tools", "migration-tools"]

# The supported product entry point. All other binaries below are contributor tools.
[[bin]]
name = "blockzilla"
path = "src/main.rs"

[[bin]]
name = "car-log-audit"
path = "src/bin/car_log_audit.rs"
required-features = ["diagnostic-tools"]

[[bin]]
name = "compare-archive-v2-access"
path = "src/bin/compare_archive_v2_access.rs"
required-features = ["diagnostic-tools"]

[[bin]]
name = "dump-system-instruction-slot"
path = "src/bin/dump_system_instruction_slot.rs"
required-features = ["diagnostic-tools"]

[[bin]]
name = "dump-vote-instruction-slot"
path = "src/bin/dump_vote_instruction_slot.rs"
required-features = ["diagnostic-tools"]

[[bin]]
name = "inspect-hot-tx-logs"
path = "src/bin/inspect_hot_tx_logs.rs"
required-features = ["diagnostic-tools"]

[[bin]]
name = "verify-access-vote-hashes"
path = "src/bin/verify_access_vote_hashes.rs"
required-features = ["diagnostic-tools"]

[[bin]]
name = "big-block-log-bench"
path = "src/bin/big_block_log_bench.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "blockhash-scan-bench"
path = "src/bin/blockhash_scan_bench.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "first-seen-hot-tier-bench"
path = "src/bin/first_seen_hot_tier_bench.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "first-seen-registry-bench"
path = "src/bin/first_seen_registry_bench.rs"
required-features = ["benchmark-tools"]

[[bin]]
name = "upgrade-block-access-vote-hashes"
path = "src/bin/upgrade_block_access_vote_hashes.rs"
required-features = ["migration-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
blockzilla-format = { path = "../crates/blockzilla-format" }
blockzilla-log-parser = { path = "../crates/blockzilla-log-parser" }
of-car-reader = { path = "../crates/old-faithful/car-reader" }
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
postcard = "1.1.3"
data-encoding = "2.11.0"
solana-pubkey = "4.2.0"
solana-short-vec = { version = "3.2.1", default-features = false }
solana-vote-interface = { version = "5.1.1", features = ["bincode"] }
wincode = { version = "0.5.4", features = ["derive"] }
minicbor = { version = "2.2.2", features = ["full"] }
gxhash = "3.5.0"
hashbrown = "0.15.5"
libc = "0.2.186"
memmap2 = "0.9.10"
prost = "0.14.3"
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
    "rustls",
] }
rayon = "1.12.0"
sha2 = "0.11.0"
