[package]
name = "car-reader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
cid = "0.11"
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
smallvec = "1.15"
minicbor = { version = "2.1", features = ["alloc", "derive"] }
solana-pubkey = "3.0.0"
solana-transaction-error = "3.0.0"
solana-transaction-status-client-types = "3.0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wincode = { version = "0.2.1", features = ["derive", "solana-short-vec"] }
zstd = "0.13"
compact-archive = { path = "../compact-archive" }
bincode = "1.3"

[build-dependencies]
prost-build = "0.14.1"
