[package]
name = "compact-archive"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1"
base64 = "0.22"
car-reader = { path = "../car-reader" }
cid = "0.11"
serde = { version = "1", features = ["derive"] }
wincode = { version = "0.2.1", features = ["derive", "solana-short-vec"] }
minicbor = { version = "2.1", features = ["full"] }
solana-message = { version = "3.0.1", features = ["bincode"] }
solana-instruction = { version = "3.0.0", features = ["bincode"] }
solana-pubkey = "3.0.0"
solana-transaction-status-client-types = "3.0.5"
solana-reward-info = "3.0.0"
solana-transaction-error = "3.0.0"
solana-account-decoder-client-types = "3.0.5"
solana-signature = "3.1.0"
prost = "0.14.1"
prost-types = "0.14.1"
bs58 = "0.5"
smallvec = "1.15.1"
serde_json = "1.0"
bytes = "1"
fxhash = "0.2.1"
rayon = "1.11.0"
rand = "0.9.2"
sled = "0.34.7"
zstd = "0.13.3"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
postcard = { version = "1.0", features = ["use-std"] }
