[package]
name = "compact-archive"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
cid = "0.11"
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
smallvec = "1.15"
solana-account-decoder-client-types = "3.0.5"
solana-instruction = { version = "3.0.0", features = ["bincode"] }
solana-message = { version = "3.0.1", features = ["bincode"] }
solana-pubkey = "3.0.0"
solana-reward-info = "3.0.0"
solana-signature = "3.1.0"
solana-transaction-context = "3.0.10"
solana-transaction-error = "3.0.0"
solana-transaction-status-client-types = "3.0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wincode = { version = "0.2.1", features = ["derive", "solana-short-vec"] }
zstd = "0.13"
postcard = { version = "1.0", features = ["use-std"] }
bytes = "1"
prost-types = "0.14.1"
serde_json = "1.0"
car-reader = { path = "../car-reader" }

[build-dependencies]
prost-build = "0.14.1"
