[package]
name = "optimize-car-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8"
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
car-reader = { path = "../car-reader" }
clap = { version = "4.5", features = ["derive"] }
compact-archive = { path = "../compact-archive" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
