[package]
name = "optimize-car"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
car-reader = { path = "../../crates/car-reader" }
clap = { workspace = true }
indicatif = { workspace = true }
optimized-archive = { path = "../../crates/optimized-archive" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
