[package]
name = "blockzilla-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["known-program-logs"]
known-program-logs = [
    "known-drift",
    "known-okx-router",
    "known-phoenix-perps",
    "known-phoenix-v1",
    "known-raydium-amm",
    "known-static-programs",
]
known-drift = []
known-okx-router = []
known-phoenix-perps = []
known-phoenix-v1 = []
known-raydium-amm = []
known-static-programs = []

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc","use-std"] }
prost = "0.14.3"
wincode = { version = "0.5.4", features = ["derive"] }
solana-pubkey = "4.2.0"
of-car-reader = { path = "../old-faithful/car-reader" }
blockzilla-log-parser = { path = "../blockzilla-log-parser" }
data-encoding = "2.11.0"
heapless = { version = "0.9.3", features = ["serde"] }
gxhash = "3.5.0"
ph = "0.11.0"
