[package]
name = "blockzilla-read-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Bounded, generation-verified Archive V2 streaming reader"

[features]
default = []
http = ["dep:reqwest", "dep:url"]

[dependencies]
blockzilla-format = { path = "../blockzilla-format" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
wincode = { version = "0.5.4", features = ["derive"] }
zstd = "0.13.3"

[dependencies.reqwest]
version = "0.13.3"
optional = true
default-features = false
features = ["blocking", "rustls"]

[dependencies.url]
version = "2.5.8"
optional = true

[dev-dependencies]
tempfile = "3.24.0"
