[package]
name = "car-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

# cbor parsing utilities
minicbor = { workspace = true }

