[package]
name = "blockzilla-hivezilla"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hive-style distributed planning and worker orchestration for Blockzilla CAR crunching"

[[bin]]
name = "hivezilla"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors"] }
