[package]
name = "blockzilla-live-producer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "blockzilla-live-producer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
ahash = "0.8.12"
blockzilla-format = { path = "../blockzilla-format" }
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = { version = "3.0.0", features = ["pem"] }
five8 = "1.0.0"
futures = "0.3.32"
gxhash = "3.5.0"
hashbrown = "0.17.1"
libc = "0.2.186"
prost = "0.14.3"
reqwest = { version = "0.13.3", default-features = false, features = ["http2", "json", "rustls"] }
rustc-hash = "2.1.2"
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wincode = "0.5.4"
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto = "12.4.0"
zstd = "0.13.3"
zeroize = "1.9.0"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"
