[package]
name = "blockzilla-token-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "blockzilla-token-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json"] }
blockzilla-format = { path = "../../crates/blockzilla-format" }
bs58 = "0.5.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wincode = "0.5.4"
zstd = "0.13.3"
