[package]
name = "blockzilla-archive-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Read-only HTTP range gateway for immutable Blockzilla Archive V2 generations"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["http1", "json", "tokio"] }
blockzilla-read-sdk = { path = "../../crates/blockzilla-read-sdk" }
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
hex = "0.4.3"
http = "1.4.0"
futures-core = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
subtle = "2.6.1"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5.3", features = ["limit", "util"] }
tower-http = { version = "0.6.8", features = ["limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.182"

[dev-dependencies]
blockzilla-format = { path = "../../crates/blockzilla-format", default-features = false }
http-body-util = "0.1.3"
tempfile = "3.26.0"
