[package]
name = "of-archive-importer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "of-archive-importer"
path = "src/main.rs"

[dependencies]
of-car-reader = { path = "../car-reader" }
blockzilla-format = { path = "../../blockzilla-format", features = ["known-program-logs"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
solana-pubkey = "4.2.0"
solana-short-vec = { version = "3.2.1", default-features = false }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wincode = "0.5.4"
zstd = "0.13.3"
minicbor = { version = "2.2.2", features = ["full"] }
gxhash = "3.5.0"
prost = "0.14.3"
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
    "rustls",
] }
