[package]
name = "of-car-reader"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Readers and index primitives for Old Faithful Solana CAR archives"
readme = "Readme.md"
keywords = ["solana", "car", "old-faithful"]
exclude = [
    ".DS_Store",
    "benches/*",
    "src/bin/profile_big_block.rs",
]

[[bin]]
name = "reader"
path = "src/bin/reader.rs"
required-features = ["reader"]

[[bench]]
name = "big_block"
harness = false

[features]
default = ["genesis", "zstd-native"]
compact-index = ["dep:xxhash-rust"]
genesis = ["dep:bzip2", "dep:tar"]
reader = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:reqwest", "zstd-native"]
zstd-native = ["dep:zstd"]
zstd-wasm = ["dep:ruzstd"]

[dependencies]
minicbor = { version = "2.2.2", features = ["full"] }
solana-short-vec = { version = "3.2.1", default-features = false, features = ["wincode"] }
wincode = { version = "0.5.4", features = ["derive"] }
zstd = { version = "0.13.3", optional = true }
ruzstd = { version = "0.8.3", optional = true }
prost = "0.14.3"
quick-protobuf = "0.8.1"
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
bzip2 = { version = "0.6.1", optional = true }
tar = { version = "0.4.45", optional = true }
bs58 = "0.5.1"
xxhash-rust = { version = "0.8.15", features = ["xxh64"], optional = true }
# reader dependencies
clap = { version = "4.6.1", features = ["derive"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
    "rustls",
], optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[build-dependencies]
pb-rs = "0.10.0"
prost-build = "0.14.3"

[package.metadata.cargo-machete]
ignored = ["pb-rs", "prost-build"]
