[package]
name = "of-get-block-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
base58-turbo = "0.1.0"
five8 = "1.0.0"
of-car-reader = { path = "../car-reader", default-features = false, features = ["compact-index", "zstd-wasm"] }
of-slot-ranges = { path = "../slot-ranges", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ryu = "1.0.23"
js-sys = "0.3.99"
prost = "0.14.3"
quick-protobuf = "0.8.1"
wasm-bindgen = "0.2.122"
worker = { version = "0.8.3", features = ["http"] }
wincode = "0.5.5"
