[package]
name = "of-slot-ranges"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Build and read Old Faithful slot-to-CAR range indexes"
readme = "README.md"
keywords = ["solana", "car", "index"]
exclude = ["*.sh"]

[[bin]]
name = "of-slot-ranges"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "of-car-slot-index"
path = "src/bin/car_slot_index.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:bs58",
    "dep:clap",
    "dep:futures",
    "dep:reqwest",
    "dep:sha2",
    "dep:time",
    "dep:zstd",
]

[dependencies]
anyhow = "1.0.102"
of-car-reader = { path = "../car-reader", version = "0.1.0", default-features = false, features = ["compact-index"] }
bs58 = { version = "0.5.1", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
futures = { version = "0.3.32", features = ["executor"], optional = true }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "http2", "blocking"], optional = true }
sha2 = { version = "0.11.0", optional = true }
time = { version = "0.3.44", features = ["formatting", "macros"], optional = true }
zstd = { version = "0.13.3", optional = true }
